feat(users): Added edit user endpoint
